...
    },
    [navigation],
  );

  const renderHeader = () => (
    <View style={styles.sectionHeader}>
      <ThemedText style={styles.sectionTitle}>Must-Reads</ThemedText>
      <Pressable style={styles.seeAllButton} testID="button-all-articles">
        <ThemedText style={styles.seeAllText}>All articles</ThemedText>
      </Pressable>
    </View>
  );

  if (isLoading) {
...
